--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Test Page</title>
+</head>
+<body>
+  <h1>Hello! 💖 Your GitHub Page is working!</h1>
+  <p>If you can see this, your page is active.</p>
+</body>
+</html>
 
